# ===== Project info

[project]
dynamic = ["version"]
name = "asgineer"
description = "A really thin ASGI web framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Almar Klein" }]
keywords = ["ASGI", "web", "framework"]
requires-python = ">= 3.8"
dependencies = []

[project.optional-dependencies]
lint = ["black", "flake8"]
docs = ["sphinx>7.2", "sphinx_rtd_theme"]
tests = ["pytest", "pytest-cov", "requests", "websockets", "uvicorn", "hypercorn", "daphne"]
dev = ["pygfx[lint,docs,tests]", "invoke"]

[project.urls]
Homepage = "https://github.com/almarklein/asgineer"
Documentation = "https://asgineer.readthedocs.io"
Repository = "https://github.com/almarklein/asgineer"

# ===== Building

# To release:
# - bump version, commit, tag, push.
# - flit publish
# - Publish tag on GH and write release notes

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
